# ADSadapter

AdsLib/: ADSadapter.cpp  CMakeLists.txt  adapter.h
